# game_reasoning_arena

./: .env_default  .gitignore  .readthedocs.yaml  OpenSpiel_game_list.py  README.md  analyze_endpoint_errors.py  app.py  board_game_arena_blog_post.md  code_flow_analysis.md  environment.yaml  flow_visualization.html  game_summary.csv  method_call_flow.md  pyproject.toml  run_logs.txt  run_logs_connect_four.txt  show_reasoning_traces.py  simple_game_demo.py  simple_test_config.yaml  test_endpoint_error.py  test_error_config.yaml  test_hex.py  test_huggingface.py
analysis/: ENTROPY_ANALYSIS_REPORT.md  Entropy_calculation.md  README.md  README_Entropy.md  README_color_scheme.md  README_how_to.md  README_reasoning_patterns.md  analyze_traces.py  demo_reasoning_traces.py  extract_reasoning_traces.py  generate_reasoning_plots.py  model_filtering.py  model_specific_plots.py  performance_tables.py  post_game_processing.py  quick_analysis.py  reasoning_analysis.py  run_full_analysis.py  show_reasoning_traces.py  test_model_filtering.py  utils.py
colabs/: LLM_OpenSpiel.ipynb  game_reasoning_arena.ipynb
docs/: agents.rst  analysis.rst  api_reference.rst  authors.rst  backends.rst  changelog.rst  code_flow.rst  conf.py  contributing.rst  examples.rst  experiments.rst  extending.rst  game_loop.rst  games.rst  index.rst  installation.rst  license.rst  minimal_index.rst  project_structure.rst  prompting.rst  quickstart.rst  reasoning_traces.rst  tutorials.rst
gradio/: README.md  app.py  gradio_config_generator.py
results/: merged_logs_20250830_090249.csv  (+1 more)
scripts/: README.md  (+7 more)
(+144 files in other folders)
